--- a/profile.html
+++ b/profile.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Title and Meta Tags Begins -->
     <title>Dashandots Technology - Your one stop software solution</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="description"
-        content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020. Book now!">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta
+      name="description"
+      content="At Dashandots, we create innovative software solutions and digital marketing strategies to help businesses thrive. Specializing in custom software, technology, and development, we ensure happy clients with cutting-edge desktop software, websites, mobile apps, IoT, and automation. Feel confident in our expertise since 2020."
+    />
     <meta charset="utf-8" />
-    <meta name="keywords"
-        content="Best online HTML trainer, CSS, JavaScript, React, React Native, Best Training Providers, MATLAB TRAINING,desktop software, websites, mobile apps, IoT, and automation,Dash and Dots, tech startup, revolutionizing technology, Delhi, software solutions, technical training, forefront of innovation, desktop software, websites, mobile apps, embedded software, IoT solutions, automation software, redefining boundaries, innovation, shaping the future, software development company in delhi, software development, company in ncr" />
+    <meta
+      name="keywords"
+      content="Best online HTML trainer, CSS, JavaScript, React, React Native, Best Training Providers, MATLAB TRAINING,desktop software, websites, mobile apps, IoT, and automation,Dash and Dots, tech startup, revolutionizing technology, Delhi, software solutions, technical training, forefront of innovation, desktop software, websites, mobile apps, embedded software, IoT solutions, automation software, redefining boundaries, innovation, shaping the future, software development company in delhi, software development, company in ncr"
+    />
     <meta name="author" content="Dashandots Technology Private Limited" />
     <!-- Seo meta tags -->
     <link rel="icon" type="image/png" href="images/logo1.png" />
     <!-- TODO: change favicon url -->
     <!-- Favicon -->
 
-    <meta property="og:title" content="Dashandots Technology">
-    <meta property="og:site_name" content="dashanddots.tech">
-    <meta property="og:url" content=https://dashanddots.tech>
-    <meta property="og:description" content="Discover Excellence with Dash and Dots! Elevate your business with our
-    expertise in desktop software, websites, mobile apps, IoT solutions, and more. Unleash the power of
-    innovation – Click to explore and transform your future today!"">
-  <meta property=" og:type" content=website>
-    <meta property="og:image" content="images/logo1.png">
+    <meta
+      property="og:title"
+      content="Dashandots Technology -Your one stop software solution"
+    />
+    <meta property="og:site_name" content="Dashandots Technology" />
+    <meta property="og:url" content="https://dashandots.tech" />
+    <meta
+      property="og:description"
+      content="Discover Excellence with Dash and Dots! Elevate your business with our
+      2020-established expertise in desktop software, websites, mobile apps, IoT solutions, and more. Unleash the power of
+      innovation – Click to explore and transform your future today!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/logo1.png" />
+
     <!--FIXME: change thumbnail -->
 
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@dashandots.tech">
-    <meta name="twitter:description"
-        content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020. Book now!">
-    <meta name="twitter:app:name:iphone" content="Dashandots Technology">
-    <meta name="twitter:app:country" content="India">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@dashandots.tech" />
+    <meta
+      name="twitter:description"
+      content="Discover our exceptional expertise in desktop software, websites, mobile apps, IoT, and automation. Empowering businesses since 2020. Book now!"
+    />
+    <meta name="twitter:app:name:iphone" content="Dash and Dots" />
+    <meta name="twitter:app:country" content="India" />
 
-    <link rel="canonical" href="https://dashanddots.tech" />
+    <link rel="canonical" href="https://dashandots.tech" />
+
     <!-- This link will open www. -->
 
     <!-- <title>Dashandots Technology: Driving Innovation and Building on Excellence</title> -->
@@ -42,27 +58,58 @@
 
     <!-- Google Font Begins -->
     <link
-        href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,800italic,700,300italic,700italic,400italic"
-        rel="stylesheet" type="text/css" />
+      href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,800italic,700,300italic,700italic,400italic"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- Google Font Ends -->
-
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "WebSite",
-      "name": "Dashandots Technology",
-      "url": "https://dashanddots.tech",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "{search_term_string}",
-        "query-input": "required name=search_term_string"
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "Dash And Dots",
+        "image": "",
+        "@id": "",
+        "url": "https://dashandots.tech",
+        "telephone": "",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "",
+          "addressLocality": "",
+          "postalCode": "",
+          "addressCountry": "IN"
+        },
+        "openingHoursSpecification": {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday",
+            "Sunday"
+          ],
+          "opens": "00:00",
+          "closes": "23:59"
+        },
+        "sameAs": [
+          "https://www.facebook.com/dashandotsglobal",
+          "https://www.instagram.com/dashandots.official",
+          "https://www.youtube.com/@dashnandots"
+        ]
       }
-    }
-  </script>
+    </script>
 
     <!-- CSS Begins-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    />
     <link href="css/carousel.css" rel="stylesheet" type="text/css" />
     <link href="css/animate.min.css" rel="stylesheet" type="text/css" />
     <link href="css/YTPlayer.css" rel="stylesheet" type="text/css" />
@@ -76,238 +123,19 @@
     <!-- Color Panel -->
     <!-- <link href="css/color-panel.css" rel="stylesheet" type="text/css" /> -->
     <style>
-           @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+        
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-body {
-    background-color: #ffffff;
-    color: #333;
-    overflow-x: hidden;
-}
-
-.container {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-
-
-/* Hero Section */
-.hero1 {
-    min-height: calc(100vh - 100px);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    position: relative;
-}
-
-.hero1::before {
-    content: '';
-    position: absolute;
-    top: -100px;
-    right: -200px;
-    width: 465px;
-    height: 630px;
-    background: linear-gradient(45deg, #ff005e, #B721FF);
-    border-radius: 50%;
-    z-index: 1;
-}
-
-.hero-content1 {
-    padding: 100px 0;
-    position: relative;
-    z-index: 2;
-}
-
-.greeting {
-    color: #6C63FF;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: -40px;
-    opacity: 0;
-    animation: fadeInUp 0.6s forwards;
-}
-
-.name {
-    font-size: 64px;
-    font-weight: 800;
-    line-height: 1.1;
-    margin-bottom: -40px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.2s forwards;
-}
-
-.title {
-    font-size: 24px;
-    color: #666;
-    margin-bottom: -30px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.4s forwards;
-}
-
-.social-links {
-    display: flex;
-    gap: 20px;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.6s forwards;
-}
-
-.social-links a {
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background: #cac7c7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #333;
-    transition: all 0.3s ease;
-}
-
-.social-links a:hover {
-    background: #6C63FF;
-    color: white;
-    transform: translateY(-5px);
-}
-
-.cta-button {
-    display: inline-block;
-    padding: 15px 40px;
-    background: linear-gradient(45deg, #6C63FF, #B721FF);
-    color: white;
-    text-decoration: none;
-    border-radius: 30px;
-    font-weight: 600;
-    transition: transform 0.3s ease;
-    opacity: 0;
-    animation: fadeInUp 0.6s 0.8s forwards;
-}
-
-.cta-button:hover {
-    transform: translateY(-5px);
-}
-
-.stats {
-    display: flex;
-    gap: 60px;
-    margin-top:-1.5rem;
-    opacity: 0;
-    animation: fadeInUp 0.6s 1s forwards;
-}
-
-.stat-item {
-    text-align: center;
-}
-
-.stat-number {
-    font-size: 36px;
-    font-weight: 700;
-    color: #6C63FF;
-    margin-bottom: 5px;
-}
-
-.stat-label {
-    color: #666;
-    font-size: 14px;
-}
-
-.hero-image {
-    position: relative;
-    z-index: 2;
-    top: 1rem;
-}
-
-.hero-image img {
-    width: 85%;
-    height: 85%;
-    object-fit: cover;
-    border-radius: 20px;
-    opacity: 0;
-    animation: fadeIn 0.6s 1.2s forwards;
-}
-.certifications h2 {
-            font-size: 24px;
-            color: #2D2D2D;
-            margin-bottom: 15px;
+        /* Hero Section */
+        .hero-section {
+            background-color: #db1c56;
+            padding: 100px 20px;
+            position: relative;
+            color: #fff;
+            clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
         }
 
-        .cert-list {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .cert-item {
-            background-color: #f0f0f0;
-            padding: 15px 0px;
-            border-radius: 20px;
-            font-size: 14px;
-            color: #4a4a4a;
-        }
-
-@keyframes fadeInUp {
-    from {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-/* Responsive Design */
-@media (max-width: 1024px) {
-    .hero1 {
-        grid-template-columns: 1fr;
-    }
-
-    .hero1::before {
-        width: 600px;
-        height: 600px;
-        top: -50px;
-        right: -300px;
-    }
-
-    .hero-image {
-        display: none;
-    }
-}
-
-@media (max-width: 768px) {
-   
-
-    .name {
-        font-size: 48px;
-    }
-
-    .stats {
-        gap: 30px;
-    }
-
-    .stat-number {
-        font-size: 28px;
-    }
-}
     </style>
-
-</head>
+  </head>
 
 <body>
     <!-- Page Loader -->
